# PrecisionEmailSimulator

./: .gitignore  ConfigPage.py  DemoWindow.py  EmailResearchLab.py  PrecisionEmailSimulator.py  README.md  TaskWindow.py  pyproject.toml  requirements.txt  test.html  test.yaml  testCSV.csv
ContentRelatedResources/html/: CSStaff_Annual_leave.html  HDMI.html  P_account.html  P_endOfYearReport.html  P_fileLink.html  P_googleShare.html  P_help.html  P_parcel.html  P_software.html  Test_Email.html  Vice_Chancellor_update.html  ads.html  ads2.html  ads3.html  ads4.html  catering.html  chair.html  curriculum.html  daily1.html  daily2_after1.html  daily3.html  daily4.html  daily5.html  daily6.html  daily_7.html  demo-flight.html  demo-speaker.html  demoContext.html  demoWelcom.html  elsevier.html  expedia.html  folderShare.html  fund.html  hotel.html  inSCIde Scoop.html  journal.html  mdpi.html  memorialLectures.html  microsoft.html  morningtea.html  (+26 more)
ContentRelatedResources/html/CSStaff_Annual_leave_files/: filelist.xml
ContentRelatedResources/html/HDMI_files/: filelist.xml
ContentRelatedResources/html/P_account_files/: filelist.xml
ContentRelatedResources/html/P_endOfYearReport_files/: filelist.xml
ContentRelatedResources/html/P_fileLink_files/: filelist.xml
ContentRelatedResources/html/P_googleShare_files/: filelist.xml
ContentRelatedResources/html/P_help_files/: filelist.xml
resources/: Thumbs.db
resources/UI_files/: config_page.ui  config_page2.ui  designer.exe - Shortcut.lnk  emailStyle.ui  forward.ui  login.ui  main_page.ui  reply.ui  welcome.ui
(+59 files in other folders)
